--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -56,11 +56,11 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="PropertySheet.props" />
+    <Import Project="PropertySheetDebug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="PropertySheet.props" />
+    <Import Project="PropertySheetDebug.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -191,6 +191,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Camera\CUDA\Camera.cuh" />
     <ClInclude Include="Source Files\Engine Core\Camera\OpenCL\CLCamera.h" />
     <ClInclude Include="Source Files\Engine Core\Frame\Frame.h" />
+    <ClInclude Include="Source Files\Engine Core\Material\CUDA\Material.cuh" />
     <ClInclude Include="Source Files\Engine Core\Material\Material.h" />
     <ClInclude Include="Source Files\Engine Core\Material\Texture\Bitmap.h" />
     <ClInclude Include="Source Files\Engine Core\Material\Texture\Texture.h" />
@@ -231,6 +232,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Utility\CUDAIncludes.h" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
+    <ClInclude Include="Source Files\Utility\CUDA\cutil_math.h" />
     <ClInclude Include="Source Files\Utility\GLIncludes.h" />
     <ClInclude Include="Source Files\Utility\GLMIncludes.h" />
     <ClInclude Include="Source Files\Utility\GPUIncludes.h" />
@@ -246,7 +248,6 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BoundingBox.cpp" />
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BVH.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
-    <ClCompile Include="Source Files\Engine Core\Material\Material.cpp" />
     <ClCompile Include="Source Files\Engine Core\Material\Texture\Bitmap.cpp" />
     <ClCompile Include="Source Files\Engine Core\Material\Texture\Texture.cpp" />
     <ClCompile Include="Source Files\Engine Core\Object\Character\Character.cpp" />
@@ -274,6 +275,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\BVH.cu" />
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\Node.cu" />
     <CudaCompile Include="Source Files\Engine Core\Camera\CUDA\Camera.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Material\CUDA\Material.cu" />
     <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Face.cu" />
     <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Object.cu" />
     <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Vertex.cu" />
