--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -215,6 +215,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputHelper.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
+    <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh" />
+    <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\Ray.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayJob.cuh" />
@@ -258,6 +260,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Input\Input.cpp" />
     <ClCompile Include="Source Files\Input\InputHelper.cpp" />
     <ClCompile Include="Source Files\Multithreading\Scheduler.cpp" />
+    <ClCompile Include="Source Files\Physics Engine\PhysicsEngine.cpp" />
     <ClCompile Include="Source Files\Ray Engine\RayEngine.cpp" />
     <ClCompile Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPtracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.cpp" />
@@ -282,6 +285,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Vertex.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\ObjectSceneAbstraction.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Scene.cu" />
+    <CudaCompile Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu" />
