--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -195,9 +195,6 @@
     <ClInclude Include="Source Files\Engine Core\Object\Character\Character.h">
       <Filter>Engine Backend\Engine Core\Object\Character</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Engine Core\Material\Texture\Texture.h">
-      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h">
       <Filter>Engine Backend\Renderer\Ray Tracer\CUDA</Filter>
     </ClInclude>
@@ -369,14 +366,20 @@
     <ClInclude Include="Source Files\Algorithms\Data Algorithms\GPU Compact\Compactor.cuh">
       <Filter>Engine Backend\Algorithms\Data Algorithms\GPU Compact</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Engine Core\Material\Texture\Image.h">
-      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Physics Engine\PhysicsEngine.h">
       <Filter>Engine Backend\Physics Engine</Filter>
     </ClInclude>
     <ClInclude Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cuh">
       <Filter>Engine Backend\Physics Engine\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Scene\Sky.h">
+      <Filter>Engine Backend\Engine Core\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Scene\CUDA\Sky.cuh">
+      <Filter>Engine Backend\Engine Core\Scene\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Material\Texture\Image.cuh">
+      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -400,9 +403,6 @@
     </ClCompile>
     <ClCompile Include="Source Files\Engine Core\Object\Character\Character.cpp">
       <Filter>Engine Backend\Engine Core\Object\Character</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Files\Engine Core\Material\Texture\Texture.cpp">
-      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.cpp">
       <Filter>Engine Backend\Renderer\Ray Tracer\CUDA</Filter>
@@ -445,9 +445,6 @@
     </ClCompile>
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BoundingBox.cpp">
       <Filter>Engine Backend\Bounding Volume Heirarchy</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Files\Engine Core\Material\Texture\Image.cpp">
-      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Physics Engine\PhysicsEngine.cpp">
       <Filter>Engine Backend\Physics Engine</Filter>
@@ -513,6 +510,12 @@
     </CudaCompile>
     <CudaCompile Include="Source Files\Physics Engine\CUDA\PhysicsEngine.cu">
       <Filter>Engine Backend\Physics Engine\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Sky.cu">
+      <Filter>Engine Backend\Engine Core\Scene\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Material\Texture\Image.cu">
+      <Filter>Engine Backend\Engine Core\Material\Texture</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
