--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -192,8 +192,12 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Camera\CUDA\Camera.cuh" />
     <ClInclude Include="Source Files\Engine Core\Camera\OpenCL\CLCamera.h" />
     <ClInclude Include="Source Files\Engine Core\Frame\Frame.h" />
+    <ClInclude Include="Source Files\Engine Core\Material\Colour\Colour.h" />
+    <ClInclude Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cuh" />
     <ClInclude Include="Source Files\Engine Core\Material\CUDA\Material.cuh" />
+    <ClInclude Include="Source Files\Engine Core\Material\CUDA\ShaderNode.cuh" />
     <ClInclude Include="Source Files\Engine Core\Material\Material.h" />
+    <ClInclude Include="Source Files\Engine Core\Material\ShaderNode.h" />
     <ClInclude Include="Source Files\Engine Core\Material\Texture\Image.cuh" />
     <ClInclude Include="Source Files\Engine Core\Object\Character\Character.h" />
     <ClInclude Include="Source Files\Engine Core\Object\CUDA\Face.cuh" />
@@ -252,6 +256,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BoundingBox.cpp" />
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BVH.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
+    <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Material\CUDA\ShaderNode.cu" />
     <CudaCompile Include="Source Files\Engine Core\Material\Texture\Image.cu">
       <FileType>CppCode</FileType>
     </CudaCompile>
