--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -420,6 +420,12 @@
     <ClInclude Include="Source Files\Utility\GPUIncludes.h">
       <Filter>Engine Frontend</Filter>
     </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\Tet.h">
+      <Filter>Engine Backend\Engine Core\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Tet.cuh">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp">
@@ -570,6 +576,9 @@
     </CudaCompile>
     <CudaCompile Include="Source Files\Utility\CUDA\CUDADevices.cu">
       <Filter>Engine Backend\Utility\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Tet.cu">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
