--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -187,6 +187,9 @@
     <Filter Include="Engine Backend\Utility\Vulkan">
       <UniqueIdentifier>{3f7284f4-f567-4add-b157-0fb32c9084dd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Shaders">
+      <UniqueIdentifier>{f34f97f2-575f-4386-b987-2d88dcf2f822}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -420,6 +423,9 @@
     <ClInclude Include="Source Files\Utility\GPUIncludes.h">
       <Filter>Engine Frontend</Filter>
     </ClInclude>
+    <ClInclude Include="Source Files\Shaders\Shader.h">
+      <Filter>Engine Backend\Shaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp">
@@ -493,6 +499,9 @@
     </ClCompile>
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp">
       <Filter>Engine Backend\Utility\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Shaders\Shader.cpp">
+      <Filter>Engine Backend\Shaders</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
