--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -135,6 +135,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
     <ClInclude Include="Source Files\Renderer\Renderer.h" />
     <ClInclude Include="Source Files\Resources\Objects\Hand.h" />
+    <ClInclude Include="Source Files\Shaders\Shader.h" />
     <ClInclude Include="Source Files\Utility\CUDAIncludes.h" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDADevices.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
@@ -157,6 +158,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BVH.cpp" />
     <ClCompile Include="Source Files\Engine Core\Allocator\Allocator.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
+    <ClCompile Include="Source Files\Shaders\Shader Test.cpp" />
+    <ClCompile Include="Source Files\Shaders\Shader.cpp" />
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp" />
     <CudaCompile Include="Source Files\Engine Core\Material\Colour\CUDA\Colour.cu" />
     <CudaCompile Include="Source Files\Engine Core\Material\CUDA\ShaderNode.cu" />
