--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -143,9 +143,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Utility\CUDA\CUDADevices.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
-    <ClInclude Include="Source Files\Utility\CUDA\cutil_math.h" />
+    <ClInclude Include="Source Files\Utility\CUDA\CUDAMath.h" />
     <ClInclude Include="Source Files\Utility\GLMIncludes.h" />
-    <ClInclude Include="Source Files\Utility\GPUIncludes.h" />
     <ClInclude Include="Source Files\Utility\OpenCLIncludes.h" />
     <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h" />
     <ClInclude Include="Source Files\Utility\GPUUtility.h" />
