--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -363,9 +363,6 @@
     <ClInclude Include="Source Files\Engine Core\Material\CUDA\Material.cuh">
       <Filter>Engine Backend\Engine Core\Material\CUDA</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Utility\CUDA\cutil_math.h">
-      <Filter>Engine Backend\Utility\CUDA</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Algorithms\Data Algorithms\GPU Compact\Compactor.cuh">
       <Filter>Engine Backend\Algorithms\Data Algorithms\GPU Compact</Filter>
     </ClInclude>
@@ -408,9 +405,6 @@
     <ClInclude Include="Source Files\Utility\Vulkan\VulkanBackend.h">
       <Filter>Engine Backend\Utility\Vulkan</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Utility\GPUIncludes.h">
-      <Filter>Engine Frontend</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Engine Core\Object\Tet.h">
       <Filter>Engine Backend\Engine Core\Object</Filter>
     </ClInclude>
@@ -422,6 +416,9 @@
     </ClInclude>
     <ClInclude Include="Source Files\Shaders\Shader.h">
       <Filter>Engine Backend\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\CUDA\CUDAMath.h">
+      <Filter>Engine Backend\Utility\CUDA</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -488,12 +485,8 @@
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp">
       <Filter>Engine Backend\Utility\Vulkan</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Shaders\Shader.cpp">
-      <Filter>Engine Backend\Shader</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Files\Shaders\Shader Test.cpp">
-      <Filter>Engine Backend\Shader</Filter>
-    </ClCompile>
+    <ClCompile Include="Source Files\Shaders\Shader Test.cpp" />
+    <ClCompile Include="Source Files\Shaders\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\CUDA\Bitonic.cu">
