Added bestNormal Specification and method Signature

--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -488,11 +488,11 @@
     <ClCompile Include="Source Files\Utility\Vulkan\VulkanBackend.cpp">
       <Filter>Engine Backend\Utility\Vulkan</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Shaders\Shader.cpp">
-      <Filter>Engine Backend\Shader</Filter>
-    </ClCompile>
     <ClCompile Include="Source Files\Shaders\Shader Test.cpp">
-      <Filter>Engine Backend\Shader</Filter>
+      <Filter>Engine Backend\Shaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Shaders\Shader.cpp">
+      <Filter>Engine Backend\Shaders</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
