--- a/Soul Engine/PropertySheet.props
+++ b/Soul Engine/PropertySheet.props
@@ -36,7 +36,7 @@
       <SubSystem>NotSet</SubSystem>
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <IgnoreSpecificDefaultLibraries>LIBCD.lib;LIBC.lib;MSVCRTD.lib;LIBCMT.lib;LIBCMTD.lib</IgnoreSpecificDefaultLibraries>
-      <ShowProgress>NotSet</ShowProgress>
+      <ShowProgress>LinkVerbose</ShowProgress>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <ProjectReference>
@@ -59,6 +59,8 @@
       <GPUDebugInfo>false</GPUDebugInfo>
       <PtxAsOptionV>false</PtxAsOptionV>
       <Runtime>InheritFromHost</Runtime>
+      <AdditionalCompilerOptions>
+      </AdditionalCompilerOptions>
     </CudaCompile>
     <CudaLink>
       <Optimization>O2</Optimization>
